Vehicle type to vehicle owner
- Vehicle's type does not exists anymore
- Added the field 'owner' on vehicle entity

--- a/web/index.html
+++ b/web/index.html
@@ -362,6 +362,15 @@
                </div>
             </div>
 
+            <!-- Owner output -->
+            <div class="row">
+               <i class="material-icons">_</i>
+               <div class="vertical-layout">
+                  <label class="output-label" data-intl="vehicle-info-owner"></label>
+                  <span id="vehicle-info-owner" class="labeled-output"><!--[owner]--></span>
+               </div>
+            </div>
+
             <div class="horizontal-separator"></div>
 
             <!-- Added date output -->
@@ -426,15 +435,6 @@
                </span>
             </div>
 
-            <!-- Type input -->
-            <div class="row mdl-input-row">
-               <i class="material-icons">_</i>
-               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                  <input id="vehicle-create-type" class="mdl-textfield__input" type="text" pattern=".*\S+.*" required="true">
-                  <label class="mdl-textfield__label" for="vehicle-create-type" data-intl="vehicle-create-type"></label>
-               </span>
-            </div>
-
             <!-- Year input -->
             <div class="row mdl-input-row">
                <i class="material-icons">_</i>
@@ -472,6 +472,15 @@
                <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                   <input id="vehicle-create-renavam" class="mdl-textfield__input" type="text" pattern="\d{11}" title="12345678912" required="true">
                   <label class="mdl-textfield__label" for="vehicle-create-renavam" data-intl="vehicle-create-renavam"></label>
+               </span>
+            </div>
+
+            <!-- Owner input -->
+            <div class="row mdl-input-row">
+               <i class="material-icons">_</i>
+               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input id="vehicle-create-owner" class="mdl-textfield__input" type="text" pattern=".*\S+.*" required="true">
+                  <label class="mdl-textfield__label" for="vehicle-create-owner" data-intl="vehicle-create-owner"></label>
                </span>
             </div>
 
@@ -529,15 +538,6 @@
                </span>
             </div>
 
-            <!-- Type input -->
-            <div class="row mdl-input-row">
-               <i class="material-icons">_</i>
-               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                  <input id="vehicle-update-type" class="mdl-textfield__input" type="text" pattern=".*\S+.*" required="true">
-                  <label class="mdl-textfield__label" for="vehicle-update-type" data-intl="vehicle-update-type"></label>
-               </span>
-            </div>
-
             <!-- Year input -->
             <div class="row mdl-input-row">
                <i class="material-icons">_</i>
@@ -575,6 +575,15 @@
                <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                   <input id="vehicle-update-renavam" class="mdl-textfield__input" type="text" pattern="\d{11}" title="12345678912" required="true">
                   <label class="mdl-textfield__label" for="vehicle-update-renavam" data-intl="vehicle-update-renavam"></label>
+               </span>
+            </div>
+
+            <!-- Owner input -->
+            <div class="row mdl-input-row">
+               <i class="material-icons">_</i>
+               <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input id="vehicle-update-owner" class="mdl-textfield__input" type="text" pattern=".*\S+.*" required="true">
+                  <label class="mdl-textfield__label" for="vehicle-update-owner" data-intl="vehicle-update-owner"></label>
                </span>
             </div>
 
