Date picker and minor visual tweaks
- Date picker implemented
- Some other visual improvements done

--- a/rest/ui/index.html
+++ b/rest/ui/index.html
@@ -259,7 +259,7 @@
                <i class="material-icons">translate</i>
                <div class="vertical-layout">
                   <label class="output-label" data-intl="settings-language"></label>
-                  <button id="settings-language" type="button" name="button"></button>
+                  <button id="settings-language" type="button" class="mdl-js-button mdl-js-ripple-effect box card raised"><i class="material-icons">language</i><span id="settings-language-output"><!--[language]--></span></button>
                </div>
             </div>
 
