--- a/web/index.html
+++ b/web/index.html
@@ -82,6 +82,7 @@
       <script src="./static/js/dialogs/default-select.js"></script>
       <script src="./static/js/dialogs/user-picker.js"></script>
       <script src="./static/js/dialogs/vehicle-picker.js"></script>
+      <script src="./static/js/dialogs/date-picker.js"></script>
       <script src="./static/js/dialogs/reservations-filters.js"></script>
 
       <!-- * Pages * -->
@@ -197,7 +198,7 @@
             <div class="vertical-line"></div>
 
             <!-- Login form -->
-            <form id="login-form" class="center" autocomplete="on">
+            <form id="login-form" class="center" autocomplete="off">
                <!-- Username input -->
                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                   <input class="mdl-textfield__input" type="text" id="login-username-in">
@@ -211,7 +212,7 @@
                </div>
 
                <!-- Error output -->
-               <span id="login-error-output"><!--[error-message]--></span>
+               <span id="login-error-output" class="fade-in"><!--[error-message]--></span>
 
                <!-- Submit button -->
                <button type="submit" class="mdl-js-button mdl-js-ripple-effect box card raised" data-intl="login-login"></button>
@@ -1744,7 +1745,7 @@
       <section id="settings-section" data-page="settings">
          <!-- Appbar -->
          <header class="app-bar flex-horizontal-layout tinted">
-            <button type="button" onclick="spa.goBack()" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">arrow_back</button>
+            <button type="button" onclick="spa.navigateTo('')" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">arrow_back</button>
             <span data-intl="settings-header"></span>
          </header>
 
@@ -1756,7 +1757,7 @@
                <i class="material-icons">translate</i>
                <div class="vertical-layout">
                   <label class="output-label" data-intl="settings-language"></label>
-                  <button id="settings-language" type="button" name="button"></button>
+                  <button id="settings-language" type="button" class="mdl-js-button mdl-js-ripple-effect box card raised"><i class="material-icons">language</i><span id="settings-language-output"><!--[language]--></span></button>
                </div>
             </div>
 
@@ -1928,6 +1929,40 @@
 
 
          <!--
+         Date picker Dialog
+         -->
+         <section class="dialog card raised" data-dialog="date-picker">
+            <!-- Appbar -->
+            <header class="app-bar flex-horizontal-layout">
+               <i class="material-icons">today</i>
+               <span data-intl="date-picker-header"></span>
+            </header>
+
+            <!-- Date picker form -->
+            <form id="date-picker-form" class="form content-before-fab" autocomplete="off">
+
+               <!-- Date input -->
+               <div class="row mdl-input-row">
+                  <i class="material-icons">_</i>
+                  <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                     <input id="date-picker-date" class="mdl-textfield__input" type="date" data-date-format="dd.mm.YYYY">
+                     <label class="mdl-textfield__label" for="date-picker-date" data-intl="date-picker-date"></label>
+                  </span>
+               </div>
+
+            </form>
+
+            <!-- Button container -->
+            <div class="flat-button-container">
+               <button id="date-picker-cancel-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect" data-intl="date-picker-cancel"></button>
+               <button id="date-picker-reset-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect" data-intl="date-picker-reset"></button>
+               <button id="date-picker-ok-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect highlighted" data-intl="date-picker-ok"></button>
+            </div>
+         </section>
+
+
+
+         <!--
          Reservations filters Dialog
          -->
          <section class="dialog card raised" data-dialog="reservations-filters">
@@ -2003,6 +2038,7 @@
             <!-- Button container -->
             <div class="flat-button-container">
                <button id="reservations-filters-cancel-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect" data-intl="reservations-filters-cancel"></button>
+               <button id="reservations-filters-reset-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect" data-intl="reservations-filters-reset"></button>
                <button id="reservations-filters-apply-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect highlighted" data-intl="reservations-filters-apply"></button>
             </div>
          </section>
