--- a/web/index.html
+++ b/web/index.html
@@ -1052,7 +1052,7 @@
       <section id="account-info-section" data-page="account-info">
          <!-- Appbar -->
          <header class="app-bar flex-horizontal-layout tinted">
-            <button type="button" onclick="spa.goBack()" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">arrow_back</button>
+            <button type="button" onclick="spa.navigateTo('users')" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">arrow_back</button>
             <span data-intl="account-info-header"></span>
          </header>
 
